fix rep weight label not being properly aligned in Firefox

--- a/src/less/components/nav.less
+++ b/src/less/components/nav.less
@@ -554,7 +554,7 @@
 
 	> .representative > .representative-name-row {
 		display: flex;
-		align-items: flex-end;
+		align-items: center;
 		margin-bottom: 8px;
 
 		> .name {
